<resources>
    <string name="app_name">TODO_12</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_note">Enter note</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>